service.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-app-service-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`LOADBALANCER_DNS`)
      kind: Rule
      services:
        - name: web-app-service
          port: 8080
